# QtProject2

./: .gitignore  AddUser.cpp  AddUser.h  AdfaerdsStyring.cpp  AdfaerdsStyring.h  AendreBrugerprofil.cpp  AendreBrugerprofil.h  Aktivitetssimulering.cpp  Aktivitetssimulering.h  CMakeLists.txt  CSender.cpp  CSender.h  Clock.cpp  Clock.h  CodeSender.cpp  CodeSender.h  EnhedsHaandtering.cpp  EnhedsHaandtering.h  Globals.h  LoginDialog.cpp  LoginDialog.h  Lysstyring.cpp  Lysstyring.h  MainPage.cpp  MainPage.h  MenuWidget.cpp  MenuWidget.h  Nesting.cpp  Nesting.h  QMainApp.cpp  QMainApp.h  Semesterprojekt.pro  SendOnX10.cpp  SendOnX10.h  StackedLayout.cpp  StackedLayout.h  TODO.txt  Unit.cpp  Unit.h  User.cpp  (+9 more)
MenuWidgets/: AddUser.cpp  AddUser.h  AdfaerdsStyring.cpp  AdfaerdsStyring.h  AdminUser.cpp  AdminUser.h  AendreBrugerprofil.cpp  AendreBrugerprofil.h  Aktivitetssimulering.cpp  Aktivitetssimulering.h  EnhedsHaandtering.cpp  EnhedsHaandtering.h  Lysstyring.cpp  Lysstyring.h  MainPage.cpp  MainPage.h  MenuWidget.cpp  MenuWidget.h
